WIP: fixing layout problem.

--- a/src/tailwind.pcss
+++ b/src/tailwind.pcss
@@ -5,6 +5,21 @@
 
 @tailwind utilities;
 
+/* HEADINGS */
+h2 {
+    @apply text-shadow text-xl text-white font-bold;
+}
+h3 {
+    @apply text-xl font-bold text-gray-800;
+}
+.sub-text {
+    @apply text-shadow text-white font-semibold;
+}
+.text-shadow {
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+/* ICONS */
 .icon {
     @apply h-16 w-16;
     transform: scale(1);
@@ -21,33 +36,28 @@
         transform: scale(1);
     }
 }
-
-h2 {
-    @apply text-shadow text-xl text-white font-bold;
+.triangle {
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
+.circle {
+    clip-path: circle(50% at 50% 50%);
+}
+.pentagon {
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+}
+.rhombus {
+   clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 }
 
-h3 {
-    @apply text-xl font-bold text-gray-800;
-}
-
-.sub-text {
-    @apply text-shadow text-white font-semibold;
-}
-
+/* HELPERS */
 .card {
-    @apply inline-block shadow-xl;
+    @apply bg-teal-600;
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     border: solid 5px #285e61;
 }
-
 .c {
     will-change: transform, opacity;
 }
-
-.text-shadow {
-    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
-}
-
 .full-height {
     height: 100vh; /* Fallback for browsers that do not support Custom Properties */
     height: calc(var(--vh, 1vh) * 100);
